[package]
name = "prong-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { version = "0.11", features = ["dynamic_linking"] }

[dev-dependencies]
bevy_asset = "0.11"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
